--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="section">
             <div class="content">
-                <h2>Palash Chatterjee</h2>
+                <h2>Sourabh</h2>
                 <p>It has survived not only five sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
         </div>
     </body>
